--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -35,19 +34,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\lenov\\Desktop\\Principios de construcci\u00f3n\\mysql-connector-java-8.0.20.jar
-file.reference.mysql-connector-java-8.0.20.jar-1=C:\\Users\\chris\\OneDrive\\Documentos\\Netbeans\\FXappl.Lifeforce\\libs\\mysql-connector-java-8.0.20.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar-1}
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.modulepath=
+javac.external.vm=false
+javac.modulepath=\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -63,6 +62,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -102,6 +102,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+jlink.launcher=false
+jlink.launcher.name=SistemaVinculacion
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -112,6 +114,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
